# tts-prototype-android

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CLAUDE_archive.md  Dockerfile  MIGRATION.md  NOTICE.md  README.md  SMOKE-CHECK.md  TASK_FIX_SBL_ACADEMIC_SPIRANTIZATION.md  backfill_audio_duration_ms.js  body.json  docker-entrypoint.sh  how -1 --name-only  package-lock.json  package.json  payload_meta_test.json  server.js  server_Чистовик Неделя 1.js  storage.js  tatus  usage.json  ~$зработка приложения Андроид.docx  ~WRL0005.tmp  ~WRL0462.tmp  Версионность.xlsx  Разработка приложения Андроид.docx
.claude/: CLAUDE.md  settings.json
.remember/: remember.md
Picture UI/: CLASSIC_MODE_PREMIUM_REDESIGN_IMPLEMENTATION_SPEC.md  classic_mode_redesign_tz.md
ai-local/: .gitignore  README.md  hebrew_tts_sidecar.py  pyproject.toml
ai-local/ai_local/: config.py  lifecycle.py  logging_setup.py  main.py  monitor.py  normalization.py  state.py
ai-local/ai_local/models/: nakdan.py  translator.py
ai-local/scripts/: convert_madlad.py  download_nakdan.py  install_madlad.py
ai-local/tests/: conftest.py  helpers.py  test_healthz.py  test_lifecycle.py
db/: ankiExportRepo.js  audioRepo.js  backfill-hebrew-norm.js  backup-cli.js  backup.js  eventsRepo.js  hebrewNorm.js  historyRepo.js  integrity-cli.js  integrity.js  libraryBundle.js  libraryRepo.js  migrate-cli.js  migrate.js  notesRepo.js  progressRepo.js  restore-cli.js  (+8 more)
experiments/hebrew_tts_phonikud_piper/: README.md  __init__.py  poc_lib.py  pyproject.toml  run_poc.py
(+999 files in other folders)
