[project]
name = "hebrew-tts-phonikud-piper-poc"
version = "0.1.0"
description = "Research-only Hebrew TTS PoC with Phonikud and Piper"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.35,<0.36",
    "phonikud-onnx>=1.0.6",
    "piper-onnx>=1.0.6",
    "soundfile>=0.13.1",
    "phonikud @ git+https://github.com/thewh1teagle/phonikud",
]

[tool.uv]
package = false
